fix(sandbox): preserve discovery order in binding registry and trust table